Masonry stylefixes. Also disabled animations on Mansonry since it was buggy and cause overlapping cards when quickly reordering them.

--- a/client/src/components/PeopleView/style.pcss
+++ b/client/src/components/PeopleView/style.pcss
@@ -38,13 +38,13 @@
 }
 
 .masonryCard {
+    padding: .25em;
+    cursor: pointer;
+}
+
+.masonryCardInner {
     background: #fff;
     padding: 1em;
-    margin: .25em;
-    width: 20%;
-
-    cursor: pointer;
-
 }
 
 .cardContainerWider{
@@ -75,7 +75,7 @@
 
 @media only screen and (min-width: 700px) {
     .masonryCard {
-        width: 45%;
+        width: 50%;
     }
     .cardContainer {
         -moz-column-count: 3;
@@ -86,7 +86,7 @@
 
 @media only screen and (min-width: 900px) {
     .masonryCard {
-        width: 30%;
+        width: 33.333%;
     }
 
     .cardContainer {
